...
            }
            .task {
                async let categories =  viewModel.fetchCategories()
                async let areas =  viewModel.fetchAreas()
                _ = await (categories, areas)
            }
            .navigationTitle("CookBook")
            .toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    Button("Logout") {
                        authViewModel.logout()
                    }
                }
...
    private var contentView: some View {
        if viewModel.isLoading {
            ProgressView("Loading...").padding()
        } else if viewModel.isSearchQueryEmpty {
            if social.myRecipes.isEmpty {
                ContentUnavailableView(
                    "Search",
                    systemImage: "magnifyingglass",
                    description: Text("Type a query to find recipes.")
                )
                .padding()
            } else {
                List{
...
